--- a/app/src/main/res/layout/donate.xml
+++ b/app/src/main/res/layout/donate.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="-40dp"
+
         android:text="Search" />
 
     <TextView
@@ -62,6 +63,7 @@
             android:background="@drawable/btnborder"
             android:layout_width="match_parent"
             android:padding="20dp"
+            android:clickable="true"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:text="Teacher Name   School Name   Needed Material" />
