--- a/app/src/main/res/layout/tutoring.xml
+++ b/app/src/main/res/layout/tutoring.xml
@@ -39,13 +39,12 @@
         android:layout_height="480dp"
         android:orientation="vertical">
 
-        <SearchView
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="20dp"
-            android:queryHint="hint"
-            />
+            android:layout_height="wrap_content" />
+
+
     </LinearLayout>
 
 </LinearLayout>
